fixed spacing more on portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,7 @@ input, #message_field {
 }
 
 .project_images {
-  width: 700px;
+  width: 525px;
   margin-left: 10%;
   display: flex;
   flex-wrap: wrap;
